kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: albionmarket-backend
  namespace: albionmarket
spec:
  ports:
    - name: http
      targetPort: 8000
      port: 8000
  selector:
    app: albionmarket-backend
